Multiple bug fixes
- HTML background-color, elastic scrolling
- Overflow-x scrollbars in tracklist

--- a/sass/2_base/_colors.scss
+++ b/sass/2_base/_colors.scss
@@ -1,8 +1,9 @@
 html#index,
 html#about,
 html#info {
-  background-color: #fff;
-  &.top-out-of-viewport { background-color: $footer-bg-color; }
+  // background-color: #fff;
+  // &.top-out-of-viewport { background-color: $footer-bg-color; }
+  background: linear-gradient(to top, #FFF 50%, $portfolio-button-color 50%);
 }
 
 html#video {
