--- a/sass/5_sections/_portfolio.scss
+++ b/sass/5_sections/_portfolio.scss
@@ -5,6 +5,20 @@
     overflow: hidden;
     height: 100vh;
     top: 0; left: 0; right: 0;
+    &::before {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 50%;
+      background-color: $portfolio-bg-color;
+      pointer-events: none;
+      display: block;
+      visibility: hidden;
+      transition: visibility 0s 0.4s;
+      // opacity: 0;
+      content: '';
+      // transition: display 0s 0.4s;
+    }
   }
   .portfolio-overlay {
     position: fixed;
@@ -15,6 +29,7 @@
     transition: opacity 0.3s ease-out;
     opacity: 0;
     will-change: opacity;
+    overflow: hidden;
   }
   .portfolio {
     position: fixed;
